fixed header fontSize and alignment in message table

--- a/src/styles/shared.styl
+++ b/src/styles/shared.styl
@@ -1,5 +1,5 @@
 .table {
-  text-align: center;
+
   font-size: .85rem !important;
 
   @media (max-width: 992px) {
